fix: escape Card.Root in markdown source for MDX generation
The generate-storybook-docs script converts .md to .mdx, so we need to escape
angle brackets in the source markdown files, not just the generated MDX.

--- a/guidelines/exp/context/Gem-Smry-1-15-10_45.md
+++ b/guidelines/exp/context/Gem-Smry-1-15-10_45.md
@@ -33,7 +33,7 @@ characteristics:
 - Focus on Critical Failures: The new guidelines prioritize telling the AI
   how to avoid common mistakes, specifically:
   1. How to correctly use compound components (e.g., always use
-     <Card.Root>).
+     `<Card.Root>`).
   2. How to correctly apply the `colorPalette` prop to buttons.
   3. To use the design system's styling functions, not Tailwind CSS.
 
