--- a/stories/documentation/figma-translation/04-Shadows-Radii.mdx
+++ b/stories/documentation/figma-translation/04-Shadows-Radii.mdx
@@ -143,7 +143,7 @@ You can apply border-radius to specific corners:
 
 ```tsx
 // ❌ WRONG: Hardcoded pixel value
-<Box shadow="0 4px 6px rgba(0,0,0,0.1)" rounded="8px">
+<Box style={{ boxShadow: '0 4px 6px rgba(0,0,0,0.1)', borderRadius: '8px' }}>
   Content
 </Box>
 ```
